<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="100dp"
        android:src="@drawable/ic_whatsapp"
        android:layout_height="100dp"/>

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:hint="@string/et_hint_your_name"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:hint="@string/et_hint_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:hint="@string/et_hint_password"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_signup_already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:text="@string/already_have_account"
        android:onClick="gotoSigninActivity"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_signup_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight=".5"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google_24"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_signup_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight=".5"
            android:backgroundTint="@color/fb_color"
            android:drawableLeft="@drawable/ic_facebook_24"
            android:text="@string/facebook"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_signup_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_with_phone"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />


</LinearLayout>